# Simulation-Engine

./: .gitignore  CMakeLists.txt  README.md
assets/models/cocktail glass/: cocktail_glass.mtl
assets/shaders/: Frag_HDR.glsl  Frag_Phong.glsl  Frag_SolidColor.glsl  HDRFrag.glsl  LightFrag.glsl  Pass3x2Vert.glsl  PassTextureFrag.glsl  PosNormUVVert.glsl  SolidColorFrag.glsl  Vert_ScreenPass.glsl
include/GLFW/: glfw3.h
include/assimp/: cimport.h  config.h  postprocess.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/glm/: common.hpp  geometric.hpp
play/: play.cpp
src/: ClothRod.cpp  ClothRod.h  Component.cpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  DisplayManager.cpp  DisplayManager.h  GridMesh.cpp  GridMesh.h  Input.cpp  Input.h  Renderer.h  RunSENG.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.hpp  SimEngine.cpp  SimEngine.h  Util.h
src/Components/: Camera.cpp  Camera.h  Lights.cpp  Lights.h  MeshComponents.cpp  MeshComponents.h  PhysicsComponents.cpp  PhysicsComponents.h  Renderable.h
src/Engine/: Component.h  ComponentManager.h  DisplayManager.cpp  DisplayManager.h  Input.h  Object.cpp  Object.h  SimEngine.cpp  SimEngine.h
src/Misc/: Common.cpp  Common.h  DynamicMeshCommon.cpp  DynamicMeshCommon.h  MeshCommon.cpp  MeshCommon.h  Util.cpp  Util.h
src/ObjComp/: Component.h  ComponentManager.cpp  Object.cpp  Object.h  Transform.h
src/Rendering/: Assets.cpp  Assets.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shader.hpp
src/Scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Cube.cpp  Cube.h  GridMesh.cpp  GridMesh.h  Material.cpp  Material.h  Mesh.h  Model.h  Primitive.cpp  Primitive.h  PrimitiveMesh.cpp  PrimitiveMesh.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SolidMaterial.cpp  SolidMaterial.h  System.h
src/Systems/: CameraController.cpp  CameraController.h  ClothRod.cpp  ClothRod.h  FixedGridMesh.cpp  FixedGridMesh.h  LightSystems.cpp  LightSystems.h  RenderableSystem.cpp  RenderableSystem.h  System.h
